--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ runs:
         docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_URL
         echo "Building..."
         export CONTAINER_FULL_IMAGE_NAME_WITH_TAG=$IMAGE_NAME_WITH_REGISTRY_PREFIX:$COMMIT_HASH
-        docker build -f ./Dockerfile --pull -t built-image-name .
+        docker build -f .staging/Dockerfile --pull -t built-image-name .
         docker tag built-image-name "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
         docker push "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
         echo $CONTAINER_FULL_IMAGE_NAME_WITH_TAG
