--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: "Deploy Docker to Caprover"
 
-description: "An Action to build a docker image and deploy to Caprover"
+description: "An Action to build a docker image and deploy to Caprover."
 author: "Alexandru Boscan"
 
 branding:
