--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,7 @@ runs:
         echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USER" --password-stdin $REGISTRY_URL
         echo "Building..."
         export CONTAINER_FULL_IMAGE_NAME_WITH_TAG=$IMAGE_NAME_WITH_REGISTRY_PREFIX:$COMMIT_HASH
-        docker build -t "${{ inputs.docker_image }}" --dockerfile "${{ inputs.dockerfile_path }}" .
+        docker build -f "${{ inputs.docker_image }}" "${{ inputs.dockerfile_path }}" .
         docker tag "${{ inputs.docker_image }}" "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
         docker push "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
         echo $CONTAINER_FULL_IMAGE_NAME_WITH_TAG
