--- a/action.yml
+++ b/action.yml
@@ -59,9 +59,6 @@ runs:
         echo "Building..."
         export CONTAINER_FULL_IMAGE_NAME_WITH_TAG=$IMAGE_NAME_WITH_REGISTRY_PREFIX:$COMMIT_HASH
         docker build -f "${{ inputs.dockerfile_path }}/${{ inputs.docker_image }}" .
-        docker tag "${{ inputs.docker_image }}" "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
-        docker push "$CONTAINER_FULL_IMAGE_NAME_WITH_TAG"
-        echo $CONTAINER_FULL_IMAGE_NAME_WITH_TAG
         echo "Deploying on CapRover..."
-        docker run caprover/cli-caprover:2.2.3 caprover deploy -u ${{inputs.url}} -p ${{inputs.password}} -a ${{inputs.app}} -i $CONTAINER_FULL_IMAGE_NAME_WITH_TAG
+        docker run caprover/cli-caprover:2.2.3 caprover deploy -u ${{inputs.url}} -p ${{inputs.password}} -a ${{inputs.app}}
       shell: bash
